# hintgrid

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  INSTALL.ru.md  Makefile  README.md  README.ru.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env.example  mastodon_schema.sql  pyproject.toml  pyrightconfig.json
.cursor/plans/: fix_interests_queries_and_update_follows_documentation_63905483.plan.md
.cursor/rules/: development.mdc  documentation.mdc  languange.mdc  querying.mdc  refactoring.mdc  struct.mdc  tests.mdc  typing.mdc  verification.mdc  warnings.mdc
deploy/: docker-compose.neo4j.yml
deploy/systemd/: hintgrid-run.service  hintgrid-run.timer
docs/: COMPOSITE_CONSTRAINTS_ANALYSIS.md  NEO4J_FEATURES_REPORT.md  REFERENCE.ru.md  WORKER_LABELS_ANALYSIS_REPORT.md
src/hintgrid/: __init__.py  app.py  config.py  exceptions.py  logging.py  state.py
src/hintgrid/cli/: __init__.py  commands.py  console.py  feed_debug_print.py  memory.py  progress_display.py  runner.py  shutdown.py
src/hintgrid/clients/: __init__.py  neo4j.py  postgres.py  redis.py
src/hintgrid/embeddings/: __init__.py  bundle.py  corpus_wrapper.py  fasttext_compression.py  fasttext_service.py  litellm_client.py  model_storage.py  provider.py  text_pipeline.py
src/hintgrid/pipeline/: __init__.py  clustering.py  community_similarity.py  community_structure.py  exporter.py  feed.py  feed_detail.py  feed_explain.py  feed_personalized_queries.py  feed_queries.py  graph.py  interests.py  interests_queries.py  leiden_diagnostics.py  loaders.py  post_info.py  singleton_cluster_collapse.py  stats.py
src/hintgrid/utils/: __init__.py  coercion.py  languages.py  msgspec_types.py  sanitize.py  snowflake.py  status_reference.py
tests/: __init__.py  conftest.py  fasttext_embedding_service.py  parallel.py  protocols.py  test_languages.py
tests/examples/: __init__.py  conftest.py
tests/examples/analytics/: __init__.py  conftest.py  test_edge_cases.py  test_fastrp.py  test_fasttext.py  test_kmeans.py  test_leiden.py  test_workflows.py
tests/examples/batch_operations/: __init__.py  conftest.py  test_leiden.py  test_posts.py  test_streaming.py
tests/examples/containers/: __init__.py  conftest.py  test_neo4j.py  test_postgres.py  test_redis.py
tests/examples/docs/: __init__.py  conftest.py  test_apoc_docs.py  test_gds_docs.py
tests/examples/embeddings/: __init__.py  conftest.py  test_clustering_quality.py  test_edge_cases.py  test_kmeans.py  test_litellm.py  test_neo4j_storage.py
tests/examples/redis_feed/: __init__.py  conftest.py  test_basic_operations.py  test_feed_management.py  test_neo4j_workflow.py  test_ttl_and_trimming.py
tests/integration/: __init__.py  conftest.py  test_security.py
tests/integration/app/: __init__.py  test_app_parse_handle.py  test_app_pipeline.py  test_clean_methods.py  test_pipeline_execution.py  test_train_errors.py
tests/integration/cli/: __init__.py  conftest.py  test_basic.py  test_clean.py  test_clean_computed.py  test_cli_validation_edge_cases.py  test_interacts_with_weights.py  test_pairwise_cli.py  test_readme_cli_examples.py  test_refresh.py  test_refresh_pairwise.py  test_reindex.py  test_runner_coverage.py  test_shutdown.py  test_train.py  test_validate.py  test_vectors.py
tests/integration/clients/: __init__.py  test_neo4j_batch_mode.py  test_neo4j_helpers.py  test_neo4j_progress_tracker.py  test_neo4j_validation.py  test_redis_client.py
tests/integration/config/: __init__.py  test_config_validation.py  test_config_validation_extended.py
tests/integration/console/: __init__.py  test_console_output.py  test_shutdown_summary.py
tests/integration/embeddings/: __init__.py  test_bundle.py  test_embedding_errors.py  test_embedding_migration.py  test_embedding_provider.py  test_fasttext_coverage.py  test_fasttext_service.py  test_litellm_batching.py  test_provider_coverage.py
tests/integration/error_handling/: __init__.py  test_connection_errors.py  test_partial_failures.py  test_timeout_errors.py
tests/integration/loaders/: __init__.py  test_all_types.py  test_batch_remainders.py  test_checkpoints.py  test_error_recovery.py  test_progress.py  test_shutdown_interrupt.py  test_since_date.py
tests/integration/performance/: __init__.py  test_stress.py
tests/unit/: __init__.py  conftest.py  test_leiden_diagnostics.py  test_parallel_isolation.py
tests/utils/: fix_test_types.py  transform_neo4j_execute.py
typings/: astor.pyi  compress_fasttext.pyi  litellm.pyi  psycopg_pool.pyi  redis.pyi  threading.pyi
typings/gensim/: __init__.pyi  utils.pyi
typings/neo4j/: __init__.pyi
typings/nltk/: __init__.pyi
typings/rich/: __init__.pyi
typings/testcontainers/: __init__.pyi  compose.pyi
(+77 files in other folders)
